# CppGBurIRIS

./: CMakeLists.txt  README.md
assets/: 2dofPlanarArm.sdf  3dofPlanarArm.sdf  6dofPlanarArm.sdf  AnthropomorphicArm.sdf  box1.sdf  box2.sdf  box3.sdf  cylinder1.sdf  cylinder2.sdf  cylinder3.sdf
assets/ur_description/urdf/: 5dof_ur3e_cylinders_collision.urdf  5dof_ur3e_spheres_collision.urdf
include/: anthropomorphic_arm.hpp  gbur_iris.hpp  generalized_bur.hpp  matplotlibcpp.h  planar_arm.hpp  robot.hpp  testing.hpp  visualization.hpp
scenes/: 2dofScene0.dmd.yaml  2dofScene1.dmd.yaml  2dofScene2.dmd.yaml  2dofScene3.dmd.yaml  3dofFlipper.dmd.yaml  3dofScene1.dmd.yaml  3dofScene2.dmd.yaml  3dofScene3.dmd.yaml  5dofUR3eWithShelves.dmd.yaml  6dofScene1.dmd.yaml  6dofScene2.dmd.yaml  6dofScene3.dmd.yaml  7dofIIWAwithShelves.dmd.yaml
src/: anthropomorphic_arm.cpp  gbur_iris.cpp  generalized_bur.cpp  main.cpp  planar_arm.cpp  robot.cpp  testing.cpp  visualization.cpp
